Simulation 2.1 Added links to 3D and 2D accordingly

--- a/3D/index.html
+++ b/3D/index.html
@@ -6,6 +6,7 @@
     <title>Three-body 3D</title>
   </head>
   <body>
+    <a href="../index.html">2D</a>
 
 
     <script src="three.js" charset="utf-8"></script>
