--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>three-body simulation</title>
   </head>
   <body>
+    <a href="3D/index.html">3D</a>
     <canvas id="canvas" height="600" width="800">
       <script src="Vector2.js" charset="utf-8"></script>
       <script src="Line.js" charset="utf-8"></script>
